samples/_failures_safe/1761040526_e185a8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13607bd9.c: In function ‘main’:
./samples/SAFE/__tmp_13607bd9.c:127:17: error: expected expression at end of input
  127 |                 for (int k = 0;
      |                 ^~~
./samples/SAFE/__tmp_13607bd9.c:127:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_13607bd9.c:127:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_13607bd9.c:127:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_13607bd9.c:127:17: error: expected declaration or statement at end of input
